--- a/userb.html
+++ b/userb.html
@@ -10,5 +10,7 @@
     <a> chinh sua file jajjjj</a>
     <h1>user b update</h1>
     <a> chinh sua lann2  jjj </a>
+    <a> them tinh nang A</a>
+    
 </body>
 </html>
